# Pragmatic

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  auto_grap_profile.json  build_cpython.cmd  multiprocess.py  ninja_tracing.py  pragmatic_text  run.py  run_setup.cmd  setup.py  test_runner.py
.devcontainer/: devcontainer.json  first-run-notice.txt  setup.sh
.github/: statistics.json
.github/workflows/: CI.yaml
PyNative/: Function.cpp  Function.hpp  Module.cpp  Module.hpp
PyRuntime/: ClassRegistry.cpp  ClassRegistry.hpp  Interpreter.hpp  MacroUtils.hpp  MainInterpreter.cpp  ProcessInterpreter.cpp  PyModule.hpp  PyRef.cpp  PyRef.hpp  PythonUtils.cpp  PythonUtils.hpp  SubInterpreter.cpp  SubInterpreter.hpp
auto_graph/: .gitignore  __init__.py  auto_graph.cpp  auto_graph.py  auto_graph_cpp.pyi  debug.py  hash.py  hash_utils.py  instrument.hpp  interpreter_test.py  python_interpreter.cpp  python_interpreter.hpp  run.py  setup.py  streams.hpp  subinterpreter_test.py
auto_graph/__private/: auto_graph_cpp.pyi  auto_graph_cpp_d.pyi
auto_graph/auto_graph_cpp/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Instrumentation.cpp  Instrumentation.hpp  Macros.hpp  Node.cpp  Node.hpp  (+10 more)
auto_graph_cpp/: Edge.hpp  GenericModule.hpp  Graph.cpp  Graph.gen.cpp  Graph.hpp  Indexer.hpp  Instrumentation.cpp  Instrumentation.gen.cpp  Instrumentation.hpp  Macros.hpp  ModuleInterface.hpp  Node.cpp  Node.gen.cpp  Node.hpp  Out.hpp  PythonUtils.hpp  Task.cpp  Task.gen.cpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  auto_graph_cpp.cpp  auto_graph_cpp.gen.cpp  auto_graph_cpp.hpp
pragmatic_cli/: __main__.py  interface_chat.py  lorem_chat.py  openai_chat.py
scripts/: loc.py
tests/: __init__.py
(+32 files in other folders)
